[tool.poetry]
name = "flask graphene"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
graphene = { git = "https://github.com/claycampbell/graphene.git", branch = "master" }
flask-graphql = "^2.0.1"
graphql-relay = "^2.0.1"
graphql-server-core = "^1.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
